syntax = "proto3";

option go_package = "../pb;pb";
import "user.proto";
import "common.proto";
// 这里有多个--proto_path是因为当前proto文件中有import别的proto文件，在构建的时候这些proto文件要从--proto_path指定的多个路径去找，
// 一个没找到就回去从另一个招
// protoc --proto_path=../../../user/proto/ --proto_path=. --go_out=. ./*.proto

// 关注关系方法
message RelationActionReq {
  int64 self_user_id = 1;
  int64 to_user_id = 2;
  int64 action_type = 3;
}

message RelationActionRsp {
  CommonResponse common_rsp = 1;
}

message GetRelationFollowListReq {
  int64 user_id = 1;
}

message GetRelationFollowListRsp {
  CommonResponse common_rsp = 1;
  repeated UserInfo user_info = 2; // 关注z者用户信息列表
}

message GetRelationFollowerListReq {
  int64 user_id = 1;
}

message GetRelationFollowerListRsp {
  CommonResponse common_rsp = 1;
  repeated UserInfo user_info = 2; // 被关注者用户信息列表
}


service RelationService {
  rpc RelationAction(RelationActionReq) returns (RelationActionRsp); // 关联关系方法
  rpc GetRelationFollowList(GetRelationFollowListReq) returns (GetRelationFollowListRsp); // 获取被关注者列表
  rpc GetRelationFollowerList(GetRelationFollowerListReq) returns (GetRelationFollowerListRsp); // 获取关注者列表
}







